--- a/CertInstaller/CertInstaller.csproj
+++ b/CertInstaller/CertInstaller.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="app.manifest" />
+    <None Include="QTasCert.pfx" />
     <None Include="Resources\QTasCert.pfx" />
   </ItemGroup>
   <ItemGroup>
